# copom-vector-pipeline

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml
scripts/: create_schema.sql  db_crud.py
src/copom_pipeline/cli/: main.py
src/copom_pipeline/core/: pipeline.py
src/copom_pipeline/database/: postgres_handler.py
src/copom_pipeline/ingestion/: bcb_downloader.py  pdf_parser.py
src/copom_pipeline/providers/: base.py  factory.py  gemini.py
src/copom_pipeline/text_processing/: chunker.py  cleaning.py
src/copom_pipeline/utils/: checkpoint_manager.py  hashing.py  logging_config.py
